k8s/manifest.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: battle-report-parser
  namespace: ${ENVIRONMENT}
spec:
  selector:
    matchLabels:
      app: battle-report-parser
  replicas: 1
  template:
    metadata:
      labels:
        app: battle-report-parser
    spec:
      imagePullSecrets:
        - name: gitlab-registry-credentials
      volumes:
        - name: battle-report-pvc
          persistentVolumeClaim:
            claimName: battle-report-pvc
      containers:
        - name: battle-report-parser
          resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 1000m
          image: ${IMAGE_TAG}
          volumeMounts:
            - name: battle-report-pvc
              mountPath: /app/reports/
          livenessProbe:
            httpGet:
              path: /status
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 3
---
# service for kb-discord-bot express server
kind: Service
apiVersion: v1
metadata:
  name: battle-report-server
  namespace: ${ENVIRONMENT}
spec:
  selector:
    app: battle-report-parser
  ports:
    - port: 3000
      targetPort: 3000

---
# ingress for kb-discord-bot express server
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: battle-report-ingress
  namespace: ${ENVIRONMENT}
spec:
  rules:
    - host: "kb.original.xwars.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: battle-report-server
                port:
                  number: 3000
